refs/ps/testcases/A3/Testcases/Error/tc4.c
int a, b{};
void main()
{
    int c;
    read c;
    print c;
}